[update] 記事ページに本文の追加

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -288,6 +288,10 @@ q:before {
   color: #888;
   text-align: center;
 }
+.entry__body {
+  font-family: serif;
+  color: #333;
+}
 .entry__more {
   display: block;
   margin: 16px auto;
