--- a/templates/poptimes/entry.html
+++ b/templates/poptimes/entry.html
@@ -35,11 +35,12 @@
           <h1 class="entry__title" data-subtitle="{{ entry.subtitle }}">{{ entry.title }}</h1>
           <p class="entry__desc">{{ entry.desc }}</p>
         </div>
-        {% comment %} <a class="entry__more" href="#">記事を読む</a> {% endcomment %}
+        <p class="entry__body">{{ entry.body }}</p>
       </section>
       {% comment %} <section class="comment">
         <h1>コメント一覧 <i class="fas fa-comment"></i></h1>
-        <form action="{% url 'poptimes:comment' company_id=entry.company_id release_id=entry.release_id %}" method="post">
+        <form action="{% url 'poptimes:comment' company_id=entry.company_id release_id=entry.release_id %}"
+          method="post">
           {% csrf_token %}
           <div class="comment__form">
             <input type="text">
@@ -48,15 +49,15 @@
         </form>
         {% if message_list %}
         <ul class="comment__list">
-        {% for message in message_list %}
+          {% for message in message_list %}
           <li>
             <div class="comment__user"><i class="fas fa-user"></i></div>
             <p>
               message.text
             </p>
           </li>
-        {% endfor %}
-        {% endif %}
+          {% endfor %}
+          {% endif %}
         </ul>
       </section> {% endcomment %}
     </div>
