--- a/static/css/style.css
+++ b/static/css/style.css
@@ -255,6 +255,9 @@ q:before {
   display: block;
   width: 100%;
   margin-bottom: 8px;
+  max-height: 800px;
+  object-fit: contain;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.32);
 }
 .entry__images {
   column-count: 2;
@@ -263,10 +266,13 @@ q:before {
 .entry__images li {
   margin-bottom: 8px;
   min-width: 50%;
+  max-height: 500px;
 }
 .entry__images img {
   display: block;
   width: 100%;
+  max-height: 500px;
+  object-fit: contain;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.32);
 }
 .entry__info {
