[update] タイトルの挙動の変更

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -198,6 +198,10 @@ q:before {
   text-align: center;
   background: white;
 }
+.nav ul li.current a {
+  background: var(--main-color);
+  color: white;
+}
 .nav ul li a:hover {
   background: var(--main-color);
   color: white;
