--- a/static/css/style.css
+++ b/static/css/style.css
@@ -315,6 +315,46 @@ q:before {
   background: var(--main-color);
   color: white;
 }
+
+/* user */
+.user {
+  margin: 16px 0 32px;
+  text-align: center;
+}
+.user h1 {
+  font-size: 20px;
+  padding: 0.5em 0;
+}
+.user__list {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.user__list li {
+  border-radius: 32px;
+  overflow: hidden;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.32);
+  transition: .3s;
+  margin-bottom: 8px;
+}
+.user__list li:hover {
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.32);
+  opacity: .8;
+}
+.user__list li + li {
+  margin-left: 16px;
+}
+.user__list li a {
+  display: block;
+  height: 64px;
+  width: 64px;
+}
+.user__list li a img {
+  display: block;
+  width: 100%;
+  height: 100%
+}
+
 /* comment */
 .comment {
   background: #f0f0f0;
